--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.1.2",
     "@types/react": "^18.0.21",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
     "eslint": "^8.25.0",
@@ -58,5 +59,12 @@
   },
   "peerDependencies": {
     "react": ">=16"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
+    "antd": "^4.23.5",
+    "joi": "^17.6.2",
+    "react-hook-form": "^7.37.0",
+    "styled-components": "^5.3.6"
   }
 }
