added interfaces and schema

--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir dist/cjs",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run prettier && npm run lint",
+    "prepublishOnly": "npm run prettier && npm run lint",
     "lint": "eslint \"{**/*,*}.{js,ts,jsx,tsx}\"",
-    "prettier": "prettier --write \"{src,tests,example/src}/**/*.{js,ts,jsx,tsx}\"",
-    "test": "jest --config jestconfig.json"
+    "prettier": "prettier --write \"{src,test,example/src}/**/*.{js,ts,jsx,tsx}\""
   },
   "repository": {
     "type": "git",
